--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
-tensorflow==2.3.0
-numpy==1.19.1
-opencv-python==4.5.3.56
+tensorflow
+numpy
+opencv-python
