--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
-tensorflow==1.15
+tensorflow==2.5.0rc0
 numpy
 opencv-python
